# GameEngine

./: .gitignore  CMakeLists.txt  GameEngine.sln  README.txt  gameEngine.vcxproj  gameEngine.vcxproj.filters  null.cpp
AudioEngine/: AudioEngine.cpp  AudioEngine.h  AudioEngineUML.xmi  CMakeLists.txt
Core/: Application.cpp  Application.h  CMakeLists.txt  Core.cpp  Core.h  Event.cpp  Event.h  Math_utils.h  Math_utils.inl  Matrix.cpp  Matrix.h  Matrix4F.cpp  Matrix4F.h  SRotation.cpp  SRotation.h  Transform.h  Vector2F.cpp  Vector2F.h  Vector3F.cpp  Vector3F.h  Vector4F.cpp  Vector4F.h
Core/Debug/: Core.ilk
Core/Objects/: Camera.cpp  Cube.cpp  Cube.h  CubeManager.cpp  CubeManager.h  GameObject.cpp  GameObject.h  ITextureObject.h  SRotation.cpp  SRotation.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Core/Pyhsics Engine/: BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  CMakeLists.txt  Collider.cpp  Collider.h  IntersectData.cpp  IntersectData.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters  PhysicsObject.cpp  PhysicsObject.h  Plane.cpp  Plane.h  main.cpp
Core/Pyhsics Engine/Debug/: PhysicsEngine.ilk
Core/Pyhsics Engine/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
Core/public/Core/: Application.h  Core_utils.h  Core_utils.inl
Core/test/testFrameRate/: testFrameRate.sln
Core/test/testFrameRate/Debug/: testFrameRate.ilk
Core/test/testFrameRate/testFrameRate/: Source.cpp  testFrameRate.vcxproj
Core/test/testFrameRate/testFrameRate/Debug/: vc142.idb
Core/test/testFrameRate/testFrameRate/Debug/testFrameRate.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testFrameRate.lastbuildstate
Core/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Debug/: CMakeLists.txt  Debug_utils.h  Debug_utils.inl
GraphicsEngine/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  GraphicsEngine.vcxproj  GraphicsEngine.vcxproj.filters  Instance.cpp  Instance.h  InstanceParameter.cpp  InstanceParameter.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  QueueFamilyHint.cpp  QueueFamilyHint.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SUniformBufferObject.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  SwapchainDetails.cpp  SwapchainDetails.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  ValidationLayer.cpp  ValidationLayer.h  (+8 more)
GraphicsEngine/Objects/: Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Cube.cpp  Cube.h  CubeManager.cpp  CubeManager.h  GameObject.cpp  GameObject.h  ITextureObject.cpp  ITextureObject.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Model3D.cpp  Model3D.h  Model3DManager.cpp  Model3DManager.h  Objects_utils.cpp  Objects_utils.h  Plane.cpp  Plane.h  PlaneManager.cpp  PlaneManager.h  SRotation.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
GraphicsEngine/public/GraphicsEngine/: Camera.h  CommandBuffer.h  Cube.h  CubeManager.h  GameObject.h  GraphicsEngine.h  ITextureObject.h  Instance.h  Light.h  LightManager.h  Model3DManager.h  Objects_utils.h  Plane.h  PlaneManager.h  QueueFamilyHint.h  Renderer.h  SUniformBufferObject.h  Scene.h  SceneManager.h  Swapchain.h  Texture.h  TextureManager.h  Vertex.h  Window.h  WindowParameters.h
GraphicsEngine/test/: CMakeLists.txt  GraphicsEngine_test.vcxproj  GraphicsEngine_test.vcxproj.filters  main.cpp
HIDEngine/: CMakeLists.txt  Event.cpp  Event.h  HIDEngine.h  HIDEngine.vcxproj  HIDEngine.vcxproj.filters  WindowEvent.cpp  WindowEvent.h
Math/: CMakeLists.txt  MathEngine.h  Math_utils.h  Math_utils.inl  Matrix.h  Matrix4F.h  SRotation.h  Transform.cpp  Transform.h  Vector2F.cpp  Vector2F.h  Vector3F.cpp  Vector3F.h  Vector4F.cpp  Vector4F.h
PhysicsEngine/: 01yrpvli.k13~  BoundingBox.cpp  BoundingBox.h  BoundingSphere.h  CMakeLists.txt  Collider.h  IntersectData.cpp  IntersectData.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters  PhysicsEngine_public.h  PhysicsObject.cpp  PhysicsObject.h  Plane.cpp  Plane.h
PhysicsEngine/test/: CMakeLists.txt  PhysicalEngine_test.vcxproj  PhysicalEngine_test.vcxproj.filters  main.cpp
PhysicsEngine/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
SDK/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  Cube.cpp  Cube.h  CubeManager.cpp  CubeManager.h  GameObject.cpp  GameObject.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Model3D.cpp  Model3DManager.cpp  Model3DManager.h  Plane.cpp  Plane.h  PlaneManager.cpp  SDK.vcxproj  SDK.vcxproj.filters  Scene.cpp  SceneManager.cpp  Texture.cpp  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h
SDK/public/SDK/: Application.h  Camera.h  CameraManager.h  Cube.h  CubeManager.h  GameObject.h  Light.h  LightManager.h  Model3D.h  Model3DManager.h  Plane.h  PlaneManager.h  SDK.h  Scene.h  SceneManager.h  Texture.h  TextureManager.h  Window.h
demo/: CMakeLists.txt  CameraScene.cpp  CameraScene.h  CollisionSphereScene.cpp  CollisionSphereScene.h  CubeScene.cpp  CubeScene.h  LightScene.cpp  LightScene.h  PlaneSphereScene.cpp  PlaneSphereScene.h  gameEngine.exp  gameEngine.lib  main.cpp
shaders/: compile.bat  default.frag  default.vert  defaultFrag.spv  defaultVert.spv
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
